turn_lexer_derive/test/test02-reject_struct.rs
use turn_lexer_derive::Lexer;

#[derive(Lexer)]
#[skip = "{ }"]
struct Foo {
    #[token = "one"]
    one: bool,
    #[regex = "[tT]wo."]
    two: i32,
}

fn main() {}
